--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -19,9 +19,11 @@
     "playwright": "npx playwright test"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "tailwindcss-radix": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
