--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.0",
+    "@radix-ui/react-label": "^1.0.0",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "tailwindcss-radix": "^2.5.0"
   },
@@ -33,6 +36,7 @@
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
@@ -60,6 +64,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "rollup-plugin-visualizer": "^5.8.0",
+    "storybook-addon-themes": "^6.1.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
