--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.0",
+    "@radix-ui/react-label": "^1.0.0",
+    "@radix-ui/react-radio-group": "^1.0.0",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
@@ -36,6 +39,7 @@
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -59,6 +63,7 @@
     "msw": "^0.45.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-visualizer": "^5.8.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
