--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -64,7 +64,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "rollup-plugin-visualizer": "^5.8.0",
-    "storybook-addon-themes": "^6.1.0",
+    "storybook-dark-mode": "^1.1.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
