add missing dep

--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -43,6 +43,7 @@
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^6.5.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.17",
