feat: added tab component

--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-radio-group": "^1.0.0",
     "@radix-ui/react-switch": "^1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@storybook/addon-a11y": "^6.5.10",
     "classnames": "^2.3.1",
