add dropdown component

--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^1.0.0",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-radio-group": "^1.0.0",
     "@radix-ui/react-switch": "^1.0.0",
@@ -31,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
+    "tailwind-merge": "^1.6.0",
     "tailwindcss-radix": "^2.5.0"
   },
   "devDependencies": {
