wip: added modal component

--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-radio-group": "^1.0.0",
+    "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-switch": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
