add select component
commit f8381f28a082be90cd898a589819db420c5975e7
Author: Manan Vaghasiya <manan@ironmanan.com>
Date:   Mon Sep 12 04:09:27 2022 +0000

    fix styles

commit 671e6fe541a637ffb8683ef3140a53fd6dbac8df
Author: Manan Vaghasiya <manan@ironmanan.com>
Date:   Sun Sep 11 03:36:13 2022 +0000

    basic single select

commit 28fbdceff0e994c7ae1679588aa7f6b5c336377f
Merge: d797a5b2 62fb91cd
Author: Manan Vaghasiya <manan@ironmanan.com>
Date:   Fri Sep 9 11:07:00 2022 +0000

    Merge branch 'tm-new-ui' into tm-new-ui-select

commit d797a5b2e6702af61712a5019826163368f94482
Author: Manan Vaghasiya <manan@ironmanan.com>
Date:   Fri Sep 9 10:17:49 2022 +0000

    select built with ariakit

--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@storybook/addon-a11y": "^6.5.10",
+    "ariakit": "2.0.0-next.41",
     "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
