make changes to supervisorconf

--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -49,7 +49,7 @@ killasgroup=true
 priority=10
 
 [program:malware_scanner]
-command=bash -c "rm -rf /tmp/yara-hunter.sock && /home/deepfence/usr/YaRadare --config-path /home/deepfence/usr/yara-hunter --socket-path=/tmp/yara-hunter.sock"
+command=bash -c "rm -rf /tmp/yara-hunter.sock && /home/deepfence/usr/YaRadare --config-path /home/deepfence/usr/yara-hunter --socket-path=/tmp/yara-hunter.sock --http-port=8012"
 numprocs=1
 autostart=true
 autorestart=true
