--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -30,8 +30,10 @@
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@storybook/addon-a11y": "^6.5.10",
+    "@tanstack/react-table": "^8.5.13",
     "ariakit": "2.0.0-next.41",
     "classnames": "^2.3.1",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -53,6 +55,7 @@
     "@storybook/theming": "^6.5.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
