--- a/deployment-scripts/helm-charts/deepfence-agent/templates/daemonset.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/templates/daemonset.yaml
@@ -105,6 +105,14 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            {{- if .Values.mountContainerRuntimeSocket.dockerSock }}
+            - name: DOCKER_SOCKET_PATH
+              value: "{{ .Values.mountContainerRuntimeSocket.dockerSockPath }}"
+            {{ end }}
+            {{- if .Values.mountContainerRuntimeSocket.containerdSock }}
+            - name: CONTAINERD_SOCKET_PATH
+              value: "{{ .Values.mountContainerRuntimeSocket.containerdSockPath }}"
+            {{ end }}
           volumeMounts:
             {{- if .Values.mountContainerRuntimeSocket.dockerSock }}
             - mountPath: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
