--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -46,8 +46,10 @@ enableGraphReport: true
 # Mount container runtime socket path to agent pod. Agent will detect which runtime it is using these files.
 mountContainerRuntimeSocket:
   dockerSock: false
+  # Change if socket path is not the following
   dockerSockPath: "/var/run/docker.sock"
   containerdSock: true
+  # Change if socket path is not the following
   containerdSockPath: "/run/containerd/containerd.sock"
 
 resources:
