--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -55,6 +55,7 @@
     "@storybook/theming": "^6.5.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
