--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -54,7 +54,8 @@
     "@storybook/testing-library": "^0.0.13",
     "@storybook/theming": "^6.5.10",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
