Helm chart - add resources per pod in values.yaml

--- a/deployment-scripts/helm-charts/deepfence-console/templates/discovery/daemonset.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/discovery/daemonset.yaml
@@ -94,14 +94,7 @@ spec:
           securityContext:
             privileged: true
           resources:
-            requests:
-              cpu: 150m
-              memory: {{ .Values.defaultResourceLimits.requests.memory }}
-            limits:
-              memory: 1Gi
-{{- if .Values.setDefaultResourceLimits }}
-              cpu: {{ .Values.defaultResourceLimits.limits.cpu }}
-{{- end }}
+            {{- toYaml .Values.discovery.resources | nindent 12 }}
       {{- with .Values.discovery.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
