--- a/deployment-scripts/helm-charts/deepfence-agent/Chart.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/Chart.yaml
@@ -21,3 +21,9 @@ version: 1.4.3
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: 1.4.0
+
+dependencies:
+  - name: deepfence-k8s-scanner
+    version: "1.16.0"
+    repository: https://deepfence-helm-charts.s3.amazonaws.com/deepfence-k8s-scanner
+    condition: deployKspm
