Helm chart - kubernetes scanner dependency

--- a/deployment-scripts/helm-charts/deepfence-agent/Chart.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/Chart.yaml
@@ -26,4 +26,4 @@ dependencies:
   - name: deepfence-k8s-scanner
     version: "0.1.0"
     repository: https://deepfence-helm-charts.s3.amazonaws.com/deepfence-k8s-scanner
-    condition: deployKspm
+    condition: deployKubernetesScanner
