--- a/deployment-scripts/helm-charts/deepfence-agent/templates/daemonset.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/templates/daemonset.yaml
@@ -83,7 +83,7 @@ spec:
             - name: INSTANCE_ID_SUFFIX
               value: "{{ .Values.instanceIdSuffix }}"
             - name: DF_CLUSTER_NAME
-              value: "{{ .Values.clusterName }}"
+              value: "{{ required .Values.clusterName }}"
             - name: AGENT_HOSTNAME
               valueFrom:
                 fieldRef:
