make changes to threatmapper kafka

--- a/deepfence_agent/etc/fenced_logrotate.conf
+++ b/deepfence_agent/etc/fenced_logrotate.conf
@@ -40,6 +40,22 @@ su root root
     copytruncate
     rotate 1
 }
+/var/log/fenced/malware-scan/*.log {
+    missingok
+    notifempty
+    compresss
+    size 20M
+    copytruncate
+    rotate 1
+}
+/var/log/fenced/malware-scan-log/*.log {
+    missingok
+    notifempty
+    compresss
+    size 20M
+    copytruncate
+    rotate 1
+}
 /var/log/fenced/compliance/*.log {
     missingok
     notifempty
