--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -107,6 +107,30 @@
 
 [INPUT]
     Name tail
+    Path ${DF_INSTALL_DIR}/var/log/fenced/malware-scan/*.log
+    Tag malware-scan
+    storage.type filesystem
+    Buffer_Chunk_Size 4K
+    Mem_Buf_Limit 5MB
+    Refresh_Interval 10
+    Skip_Long_Lines On
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/malware-scan.db
+    Parser json
+
+[INPUT]
+    Name tail
+    Path ${DF_INSTALL_DIR}/var/log/fenced/malware-scan-log/*.log
+    Tag secret-scan-logs
+    storage.type filesystem
+    Buffer_Chunk_Size 4K
+    Mem_Buf_Limit 5MB
+    Refresh_Interval 10
+    Skip_Long_Lines On
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/secret-scan-log.db
+    Parser json
+
+[INPUT]
+    Name tail
     Path ${DF_INSTALL_DIR}/var/log/fenced/compliance/*.log
     Tag compliance
     storage.type filesystem
@@ -143,11 +167,35 @@
 
 [OUTPUT]
     Name  deepfence
+    Match malware-scan
+    dfhost ${MGMT_CONSOLE_URL}
+    dfport ${MGMT_CONSOLE_PORT}
+    dfpath /ingest
+    dftopic malware-scan
+    dfkey ${DEEPFENCE_KEY}
+    dfschema https
+    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+
+[OUTPUT]
+    Name  deepfence
     Match secret-scan-logs
     dfhost ${MGMT_CONSOLE_URL}
     dfport ${MGMT_CONSOLE_PORT}
     dfpath /ingest
     dftopic secret-scan-logs
+    dfkey ${DEEPFENCE_KEY}
+    dfschema https
+    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+
+[OUTPUT]
+    Name  deepfence
+    Match malware-scan-logs
+    dfhost ${MGMT_CONSOLE_URL}
+    dfport ${MGMT_CONSOLE_PORT}
+    dfpath /ingest
+    dftopic malware-scan-logs
     dfkey ${DEEPFENCE_KEY}
     dfschema https
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
