--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -120,13 +120,13 @@
 [INPUT]
     Name tail
     Path ${DF_INSTALL_DIR}/var/log/fenced/malware-scan-log/*.log
-    Tag secret-scan-logs
+    Tag malware-scan-logs
     storage.type filesystem
     Buffer_Chunk_Size 4K
     Mem_Buf_Limit 5MB
     Refresh_Interval 10
     Skip_Long_Lines On
-    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/secret-scan-log.db
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/malware-scan-log.db
     Parser json
 
 [INPUT]
