make changes to td-agent-bit

--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -161,6 +161,7 @@
     dfpath /ingest
     dftopic secret-scan
     dfschema https
+    dfkey ${DEEPFENCE_KEY}
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
@@ -172,6 +173,7 @@
     dfpath /ingest
     dftopic secret-scan-logs
     dfschema https
+    dfkey ${DEEPFENCE_KEY}
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
@@ -183,6 +185,7 @@
     dfpath /ingest
     dftopic compliance
     dfschema https
+    dfkey ${DEEPFENCE_KEY}
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
@@ -194,6 +197,7 @@
     dfpath /ingest
     dftopic compliance-scan-logs
     dfschema https
+    dfkey ${DEEPFENCE_KEY}
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
@@ -205,6 +209,7 @@
     dfpath /ingest
     dftopic malware-scan
     dfschema https
+    dfkey ${DEEPFENCE_KEY}
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
@@ -216,6 +221,7 @@
     dfpath /ingest
     dftopic malware-scan-logs
     dfschema https
+    dfkey ${DEEPFENCE_KEY}
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
