--- a/deployment-scripts/helm-charts/deepfence-console/templates/ingress/ingress.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/ingress/ingress.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-  - host: {{ .Release.Namespace }}{{ .Values.saas_domain }}
+  - host: {{ .Values.deepfenceUrl }}
     http:
       paths:
       - backend:
