add missing internal port on api pod

--- a/deployment-scripts/helm-charts/deepfence-console/templates/api/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/api/deployment.yaml
@@ -151,6 +151,9 @@ spec:
             - name: http
               containerPort: 9998
               protocol: TCP
+            - name: internal
+              containerPort: 9997
+              protocol: TCP
           resources:
             {{- toYaml .Values.api.resources | nindent 12 }}
       {{- with .Values.api.nodeSelector }}
