changing rules path

--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -61,7 +61,7 @@ COPY plugins/docker_bin /home/deepfence/bin
 
 COPY --from=build /usr/local/bin/syft /usr/local/bin/syft
 COPY --from=malware_build  /home/deepfence/usr/YaRadare /home/deepfence/usr/YaRadare
-COPY --from=malware_build  /home/deepfence/rules /home/deepfence/rules
+COPY --from=malware_build  /home/deepfence/usr /home/deepfence/usr
 COPY --from=malware_build /home/deepfence/usr/config.yaml /home/deepfence/usr/yara-hunter/config.yaml
 COPY --from=malware_build /usr/local/yara /usr/local/yara
 COPY --from=malware_build /usr/local/yara/lib /usr/local/lib
