Add service account to all console pods

--- a/deployment-scripts/helm-charts/deepfence-console/templates/diagnosis/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/diagnosis/deployment.yaml
@@ -25,6 +25,7 @@ spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
       serviceAccountName: {{ .Values.serviceAccountName }}
+      automountServiceAccountToken: true
       volumes:
 {{- if .Values.mountContainerRuntimeSocket.dockerSock }}
       - name: docker-sock
