--- a/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
@@ -24,6 +24,8 @@ spec:
     spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
+      serviceAccountName: {{ .Values.serviceAccountName }}
+      automountServiceAccountToken: false
 {{- if .Values.backend.initContainerRequired }}
       initContainers:
       - name: init-sysctl
