--- a/deployment-scripts/helm-charts/deepfence-console/templates/discovery/daemonset.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/discovery/daemonset.yaml
@@ -25,6 +25,8 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
+      serviceAccountName: {{ .Values.serviceAccountName }}
+      automountServiceAccountToken: false
       volumes:
 {{- if .Values.mountContainerRuntimeSocket.dockerSock }}
         - name: docker-sock
