--- a/deployment-scripts/helm-charts/deepfence-console/templates/elasticsearch/elasticsearch.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/elasticsearch/elasticsearch.yaml
@@ -91,6 +91,8 @@ spec:
       {{- end }}
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
+      serviceAccountName: {{ .Values.serviceAccountName }}
+      automountServiceAccountToken: false
   volumeClaimTemplates:
     - metadata:
         name: deepfence-data
