--- a/deployment-scripts/helm-charts/deepfence-console/templates/fetcher/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/fetcher/deployment.yaml
@@ -24,6 +24,8 @@ spec:
     spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
+      serviceAccountName: {{ .Values.serviceAccountName }}
+      automountServiceAccountToken: false
       volumes:
         - name: data
           emptyDir: {}
