--- a/deployment-scripts/helm-charts/deepfence-console/templates/router/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/router/deployment.yaml
@@ -24,6 +24,8 @@ spec:
     spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
+      serviceAccountName: {{ .Values.serviceAccountName }}
+      automountServiceAccountToken: false
       containers:
         {{- if .Values.saas_deployment }}
         - name: promtail-sidecar-deepfence-router
