--- a/deepfence_agent/plugins/Makefile
+++ b/deepfence_agent/plugins/Makefile
@@ -4,14 +4,9 @@ all: localinit proto bin/SecretScanner bin/package-scanner
 localinit:
 	$(PWD)/bootstrap.sh
 
-#bin/open-tracer: ./open-tracer/**/*.rs
-#	(cd open-tracer/open-tracer-ebpf && cargo build --release)
-#	(cd open-tracer/open-tracer-usr && OPEN_TRACER_EBPF_BIN_ABS_PATH=$(PWD)/open-tracer/target/bpfel-unknown-none/release/open-tracer-ebpf cargo build --release)
-#	cp $(PWD)/open-tracer/target/release/open-tracer $(PWD)/bin
-
 bin/SecretScanner: ./SecretScanner/**/*.go
 	(cd SecretScanner && make)
-	mkdir $(PWD)/bin/secret-scanner/
+	-mkdir $(PWD)/bin/secret-scanner/
 	cp $(PWD)/SecretScanner/SecretScanner $(PWD)/bin/secret-scanner/
 	cp $(PWD)/SecretScanner/config.yaml $(PWD)/bin/secret-scanner/
 
@@ -28,10 +23,8 @@ proto: ./agent-plugins-grpc/proto/*.proto
 	cp agent-plugins-grpc/proto/*.go $(PWD)/proto
 
 clean:
-	-#rm $(PWD)/bin/open-tracer
 	-rm -rf $(PWD)/bin/secret-scanner/
 	-rm $(PWD)/bin/package-scanner
-	#cargo clean --manifest-path=./open-tracer/Cargo.toml
 	(cd agent-plugins-grpc && make clean)
 
 .PHONY: clean localinit
