--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -54,6 +54,9 @@ mountContainerRuntimeSocket:
   containerdSock: true
   # Change if socket path is not the following
   containerdSockPath: "/run/containerd/containerd.sock"
+  crioSock: false
+  # Change if socket path is not the following
+  crioSockPath: "/var/run/crio/crio.sock"
 
 resources:
   requests:
