--- a/deployment-scripts/helm-charts/deepfence-console/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/values.yaml
@@ -100,6 +100,9 @@ mountContainerRuntimeSocket:
   containerdSock: true
   # Change if socket path is not the following
   containerdSockPath: "/run/containerd/containerd.sock"
+  crioSock: false
+  # Change if socket path is not the following
+  crioSockPath: "/var/run/crio/crio.sock"
 
 serviceAccountName: deepfence-console
 
